[Bookmarks] Recursively count bookmarks in a folder for the description

The bookmark count for the folder description was simply number of
children in the folder before. Changing this to count number of
bookmarks recursively on sub folders.

Bug: 789363
Change-Id: Iea0d02146cc944e035e6ae58e26b682b4361cca2